--- a/client/src/pages/Stunents/StudentItem.scss
+++ b/client/src/pages/Stunents/StudentItem.scss
@@ -1,4 +1,4 @@
-.UpdateStudent {
+.StudentItem {
   width: 300px;
   margin-top: 20px;
   padding: 20px;
@@ -13,33 +13,11 @@
   justify-content: space-around;
 }
 
-.UpdateStudent .buttons button {
+.StudentItem .buttons button {
   padding: 13px;
   margin: 0 8px;
   border: none;
   background-repeat: no-repeat;
   background-color: #f5f5f5;
   cursor: pointer;
-}
-
-.ModalWindow {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-.ModalContent {
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-}
-
-.ModalContent h2 {
-  margin-bottom: 20px;
-}
-
-.ModalContent button {
-  margin-top: 20px;
 }
