--- a/client/src/pages/Foooter/Footer.scss
+++ b/client/src/pages/Foooter/Footer.scss
@@ -1,20 +1,28 @@
 .Footer {
-bottom: 0;
-height: 100px;
-background-color: #333;
-display: flex;
-justify-content: space-around;
-align-items: center;
-color: #fff;
-padding: 0 20px;
-position: sticky;
-  }
+  bottom: 0;
+  height: 90px;
+  background-color: #333;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: #fff;
+  padding: 0 20px;
+  position: sticky;
+}
 
-  .button {
-    color: #fff;
-    text-decoration: none;
-    font-size: 28px;
-    transition:
-      color 0.3s,
-      transform 0.3s;
-  }
+.button {
+  color: #fff;
+  text-decoration: none;
+  font-size: 28px;
+  transition:
+    color 0.3s,
+    transform 0.3s;
+}
+.Footer button {
+  padding: 32px;
+  border: none;
+  border-radius: 20px;
+  background-repeat: no-repeat;
+  background-color: #f5f5f5;
+  cursor: pointer;
+}
