--- a/client/src/pages/Stunents/StudentsPage.scss
+++ b/client/src/pages/Stunents/StudentsPage.scss
@@ -1,5 +1,6 @@
 .StudentMain {
   margin-top: 50px;
+  margin-bottom: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,6 +27,18 @@
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
+}
+
+.NoLog {
+  height: 100vh;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
+
+.Anolog {
+  font-size: 30px;
 }
 
 /* Можете добавить дополнительные стили для оформления информации о студентах */
