--- a/client/src/pages/Update/FormUpdate.scss
+++ b/client/src/pages/Update/FormUpdate.scss
@@ -11,7 +11,7 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  background-color: #007bff;
+  background-color: rgb(69, 32, 171);
   color: #fff;
   font-size: 16px;
 }
